<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:id="@+id/note_details_view">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical" >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/fragment_note_title" />

            <EditText
                android:id="@+id/note_title_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="text"
                android:text="" />

            <TextView
                android:id="@+id/textView4"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:text="@string/fragment_note_content" />

            <EditText
                android:id="@+id/note_content_field"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="top|start"
                android:ems="10"
                android:inputType="textMultiLine"
                android:minHeight="@dimen/note_content_edit_min_height" />


            <TextView
                android:id="@+id/textView5"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:text="@string/fragment_store_type" />

            <RadioGroup
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                android:id="@+id/store_type_choice"
                android:checkedButton="@+id/store_type_file_system">

                <RadioButton
                    android:id="@+id/store_type_file_system"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store_type_file_system" />

                <RadioButton
                    android:id="@+id/store_type_sqlite"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:text="@string/store_type_sqlite" />
            </RadioGroup>

            <Button
                android:id="@+id/save_note_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="@dimen/layout_marginTop"
                style="@style/Widget.AppCompat.Button.Colored"
                android:background="@color/orange"
                android:text="@string/action_save" />

            <Button
                android:id="@+id/delete_note_btn"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:visibility="gone"
                android:layout_marginTop="@dimen/layout_marginTop"
                style="@style/Widget.AppCompat.Button.Colored"
                android:text="@string/action_delete" />

        </LinearLayout>
    </ScrollView>

    <include layout="@layout/view_progress" />
</FrameLayout>