<android.support.design.widget.CoordinatorLayout
    android:id="@+id/notes_main_view"
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <android.support.design.widget.FloatingActionButton
        android:id="@+id/add_note_btn"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="bottom|right|end"
        android:layout_margin="@dimen/note_add_btn_margin"
        android:clickable="true"
        android:tint="@android:color/background_light"
        android:backgroundTint="@color/orange"
        app:fabSize="normal"
        app:srcCompat="@android:drawable/ic_input_add" />

    <android.support.v7.widget.RecyclerView
        android:id="@+id/notes_list_view"
        android:layout_width="match_parent"
        android:layout_height="match_parent"></android.support.v7.widget.RecyclerView>

    <include layout="@layout/view_progress" />


</android.support.design.widget.CoordinatorLayout>