<?xml version="1.0" encoding="utf-8"?>
<android.support.v4.widget.DrawerLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/drawer_layout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    tools:openDrawer="start">

    <include
        layout="@layout/menu_app_bar"
        android:layout_width="match_parent"
        android:layout_height="match_parent" />

    <!-- Sidebar Menu -->
    <android.support.design.widget.NavigationView
        android:id="@+id/nav_view"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:layout_gravity="start"
        android:fitsSystemWindows="true"
        app:itemTextColor="@drawable/menu_color"
        app:itemIconTint="@drawable/menu_color"
        app:headerLayout="@layout/menu_nav_header"
        app:menu="@menu/menu_sidebar_content" />

</android.support.v4.widget.DrawerLayout>