...

        <item
            android:id="@+id/nav_security_device_trust"
            android:title="@string/nav_security_device_trust" />

        <item
            android:id="@+id/nav_security_storage"
            android:title="@string/nav_security_storage" />

        <item
            android:id="@+id/nav_security_cert_pinning"
            android:title="@string/nav_security_cert_pinning" />

...
